fix(editor translations modal): ensure translation textarea cannot expand past its full width
Avoids cases where the resize handle is lost, or a horizontal scrollbar might appear.

--- a/app/javascript/scss/editor/_translation-settings.scss
+++ b/app/javascript/scss/editor/_translation-settings.scss
@@ -22,7 +22,8 @@
   overflow-y: auto;
 
   .form-textarea {
-    width: calc(100% - $margin * 0.25);
+    width: 100%;
+    max-width: calc(100% - $margin * 0.25);
   }
 }
 
